# sayata-fullstack-assignment

./: .gitignore  README.md  package-lock.json
client/: index.html  package-lock.json  package.json
client/src/: App.js  App.tsx
client/src/api/: SubmissionsApi.tsx
client/src/components/: ApplicationIndicator.tsx  BindSubmission.js  CreateSubmission.js  Navbar.js  NotFound.js  PageHeader.tsx  SubmissionForm.css  SubmissionForm.tsx  SubmissionRow.js  Submissions.js  UploadPdf.js  UpperHeader.tsx  bindSubmission.css  createSubmission.css  navbar.css  submission.css
client/src/pages/: BindSubmission.tsx  NewSubmission.tsx  Submissions.tsx
server/: mock_data_csv.csv  pyproject.toml  requirements.txt
server/src/: __main__.py  api.py  config.json  db.py  db_helpers.py  models.py  submission.py  utils.py
server/tests/: api_client.py  test_api.py  test_db.py
