[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Alon Krasne <alonkrasne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
pydantic = "^1.10.4"
flask-cors = "^3.0.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
requests = "^2.28.2"
faker = "^16.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
